syntax = "proto3";
package Shared.Services;
import "protobuf-net/bcl.proto"; // schema for protobuf-net's handling of core .NET types

message CalculateRequest {
   .bcl.Decimal A = 1;
   .bcl.Decimal B = 2;
   Operator Operator = 3;
}
message CalculateResponse {
   .bcl.Decimal Result = 1;
}
message CalendarRequest {
   int32 Year = 1;
   int32 Month = 2;
}
message CalendarResponse {
   repeated Day List = 1;
}
message Day {
   int32 DayNumber = 1;
   string Weekday = 2;
   int32 Year = 3;
   string Month = 4;
}
message HelloRequest {
   string Name = 1;
}
message HelloResponse {
   string Result = 1;
}
enum Operator {
   Add = 0;
   Subtract = 1;
   Multiply = 2;
   Divide = 3;
}
message TimeRequest {
}
message TimeResponse {
   .bcl.DateTime NowUtc = 1;
   .bcl.DateTime Now = 2;
}
service SampleService {
   rpc Calculate (CalculateRequest) returns (CalculateResponse);
   rpc GetDaysInMonth (CalendarRequest) returns (CalendarResponse);
   rpc GetTime (TimeRequest) returns (TimeResponse);
   rpc Hello (HelloRequest) returns (HelloResponse);
}
